--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Hello World
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta http-equiv="refresh" content="7; url='https://under4mhz.itch.io'" />
+  </head>
+  <body>
+    <p>Redirecting to landing page</p>
+  </body>
+</html>
